--- a/src/translations/jp/common.json
+++ b/src/translations/jp/common.json
@@ -9,6 +9,34 @@
         "taskFor" : "{{day}}のタスク",
         "itsEmpty": "何もありません",
         "itsEmptyMessage": "この一日の中でタスクはありません"
+    },
+    "_comment": "add languages from here",
+    "slideMenu": {
+        "configuration": "構成",
+        "doneTasks": "完了タスク",
+        "logOut": "ログアウト",
+        "login": "ログイン"
+    },
+    "configuration": {
+        "language": "言語",
+        "darkTheme": "黒いテーマ",
+        "yes": "はい",
+        "no": "いいえ"
+    },
+    "button": {
+        "apply": "適用する",
+        "cancel": "キャンセル",
+        "add": "追加する"
+    },
+    "modal": {
+        "add": {
+            "title": "タスクを追加する",
+            "placeholder": "タスクを書いてください",
+            "reminder": "備忘",
+            "priority": "優先度"
+        },
+        "edit": {
+            "title": "タスクを編集する"
+        }
     }
-
 }
